--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -17,7 +17,9 @@ exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CUR
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
 exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once = waybar --config /home/enrico/.config/waybar/hyprland_config --style /home/enrico/.config/waybar/hyprlandbar.css & dunst & signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland & thunderbird & rot8 & /usr/lib/kdeconnectd & wlsunset -S 08:00 -s 19:00
-exec-once = swaybg --image /home/enrico/Pictures/Wallpapers/steampunk_city.jpeg
+#exec-once = swaybg --image /home/enrico/Pictures/Wallpapers/steampunk_city.jpeg
+exec-once = hyprpaper
+exec-once = obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec = kanshi
 exec = swayidle -w timeout 800 'swaylock -f -c 000000' timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
 
@@ -58,7 +60,9 @@ gestures {
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-	blur = no
+	blur {
+		false
+	}
     rounding = 7
     drop_shadow = yes
     shadow_range = 4
@@ -126,6 +130,7 @@ windowrulev2 = float, center, title:^(\d+ Reminders?)$
 #Workspace assignment 
 windowrulev2 = workspace 5, title:^(Discrod)$ 
 windowrulev2 = workspace 8, class:^(thunderbird)$ 
+windowrulev2 = workspace 2, class:^(obsidian)$ 
 windowrulev2 = workspace 8, title:^(org.gnome.Calendar)$ 
 windowrulev2 = workspace 9, title:^(Signal)$ 
 windowrulev2 = workspace 9, title:^(Telegram)$ 
