--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -12,7 +12,7 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Execute your favorite apps at launch
-exec-once = /home/enrico/.config/hypr/scripts/portals.sh
+exec-once = /home/enrico/.config/hypr/scripts/portals.sh 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
 exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
@@ -126,7 +126,9 @@ windowrule = float, title:^(Picture-in-Picture)$
 windowrule = opacity 0.92, Thunar
 windowrulev2 = float, center, opacity 1, class:^(kitty)$, title:^(spt)$
 windowrulev2 = float, center, title:^(\d+ Reminders?)$
-#
+windowrulev2 = float, center, title:^(New Text Note — Okular)$
+windowrulev2 = float, center, title:^(Open Document)$
+
 #Workspace assignment 
 windowrulev2 = workspace 5, title:^(Discrod)$ 
 windowrulev2 = workspace 8, class:^(thunderbird)$ 
@@ -148,6 +150,7 @@ bind = SUPER, E, exit
 bind = SUPER, E, exec, dolphin
 bind = SUPER, B, exec, firefox
 bind = SUPER, M, exec, thunderbird
+bind = SUPER, T, exec, telegram-desktop
 bind = SUPER, V, togglefloating 
 bind = SUPER, F, fullscreen
 bind = SUPER, S, exec, signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland
@@ -226,7 +229,7 @@ bind = SUPER, mouse_down, workspace, e+1
 bind = SUPER, mouse_up, workspace, e-1
 
 # will switch to a submap called resize
-bind=SUPER,R,submap,resize
+bind=ALT,R,submap,resize
 
 # will start a submap called "resize"
 submap=resize
@@ -239,6 +242,26 @@ binde=,down,resizeactive,0 10
 
 # use reset to go back to the global submap
 bind=,escape,submap,reset 
+
+# will reset the submap, meaning end the current one and return to the global one
+submap=reset
+
+# keybinds further down will be global again...
+# will switch to a submap called resize
+bind=SUPER,R,submap,resize
+
+# will start a submap called "resize"
+submap=resize
+
+# sets repeatable binds for resizing the active window
+binde=,l,resizeactive,10 0
+binde=,h,resizeactive,-10 0
+binde=,k,resizeactive,0 -10
+binde=,j,resizeactive,0 10
+
+# use reset to go back to the global submap
+bind=,escape,submap,reset 
+bind=,enter,submap,reset 
 
 # will reset the submap, meaning end the current one and return to the global one
 submap=reset
