--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,21 +1,25 @@
-background #f8f8f8
-foreground #2a2b33
-cursor #bbbbbb
-selection_background #e5e5e6
-color0 #000000
-color8 #000000
-color1 #de3d35
-color9 #de3d35
-color2 #3e953a
-color10 #3e953a
-color3 #d2b67b
-color11 #d2b67b
-color4 #2f5af3
-color12 #2f5af3
-color5 #950095
-color13 #a00095
-color6 #3e953a
-color14 #3e953a
-color7 #bbbbbb
-color15 #ffffff
-selection_foreground #2a2b33
+## name: Nightfly
+## license: MIT
+## upstream:  https://github.com/bluz71/vim-nightfly-guicolors/blob/master/terminal_themes/kitty-theme.conf
+
+background            #011627
+foreground            #acb4c2
+cursor                #9ca1aa
+selection_foreground  #080808
+selection_background  #b2ceee
+color0   #9ca1aa
+color1   #fc514e
+color2   #a1cd5e
+color3   #e3d18a
+color4   #82aaff
+color5   #c792ea
+color6   #7fdbca
+color7   #a1aab8
+color8   #7c8f8f
+color9   #ff5874
+color10  #21c7a8
+color11  #ecc48d
+color12  #82aaff
+color13  #ae81ff
+color14  #7fdbca
+color15  #d6deeb
