--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -61,7 +61,7 @@ decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
 	blur {
-		false
+		enabled = false
 	}
     rounding = 7
     drop_shadow = yes
@@ -153,6 +153,7 @@ bind = SUPER, M, exec, thunderbird
 bind = SUPER, T, exec, telegram-desktop
 bind = SUPER, V, togglefloating 
 bind = SUPER, F, fullscreen
+bind = SUPER, W, exec, /home/enrico/Scripts/wallpaper_change.sh
 bind = SUPER, S, exec, signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland
 bind = SUPER, D, exec, wofi --show drun
 bind = SUPER, P, exec, /home/enrico/Scripts/screenshot.sh
