--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -19,31 +19,6 @@ check_for_updates_on_startup	0
 # Use old keybind parsing method (only for backwards compatibility)
 use_legacy_keybinds 0
 
-# The color with which the screen is cleared before rendering the pdf (this is the background color of the application and not the PDF file)
-background_color   0.93 0.88 0.78
-dark_mode_background_color    0.0 0.0 0.0
-custom_background_color   0.98 0.96 0.84
-custom_text_color  0.0 0.0 0.0
-
-# Showing full white text on black background can be irritating for the eye, we can dim the whites a little bit using the contrast option
-dark_mode_contrast			0.8
-
-# Highlight color when text is selected using mouse
-text_highlight_color    1.0 1.0 0.0
-
-# The color of highlight ruler which is displayed when right click is pressed
-visual_mark_color    0.0 0.0 0.0 0.1
-
-# Highlight color when text is a search match
-search_highlight_color  0.0 1.0 0.0
-
-# Hihglight color for PDF links (note that highlight is off by default
-# and can only be seen by performing a toggle_highlight command. See keys.config for more details)
-link_highlight_color    0.0 0.0 1.0
-
-# Hihglight color for synctex forward search highlights
-synctex_highlight_color    1.0 0.0 1.0
-
 # Urls to use when executing external_search commands
 search_url_s	https://scholar.google.com/scholar?q=
 search_url_l	http://gen.lib.rus.ec/scimag/?q=
@@ -122,23 +97,11 @@ sort_bookmarks_by_location	1
 ## sioyek across multiple computers
 #shared_database_path    /some/path/shared.db
 
-## Name of the font to use for UI text
-#ui_font Some Font Name
-## Size of the UI font
-#font_size 20
-
 ## Semicolon-separated list of command to execute upon sioyek startup
 #startup_commands    toggle_visual_scroll;toggle_dark_mode
 
 # Normally mouse wheel zooms in on the middle of the screen, but if this is set to 1, we zoom in on the cursor
 wheel_zoom_on_cursor 0
-
-## Color of status bar background
-#status_bar_color 0 0 0
-## Color of status bar text
-#status_bar_text_color 1 1 1
-## Font size of the status bar text
-#status_bar_font_size 20
 
 ## The default size of main window when helper window is closed
 #single_main_window_size 800 600
@@ -233,6 +196,21 @@ prerender_next_page_presentation 1
 # Use case-insensitive search
 #case_sensitive_search 0
 
+###Colorscheme###
+
+# The color with which the screen is cleared before rendering the pdf (this is the background color of the application and not the PDF file)
+
+background_color   0.93 0.88 0.78
+#dark_mode_background_color    0.0 0.0 0.0
+#custom_background_color   0.98 0.96 0.84
+#custom_text_color  0.0 0.0 0.0
+dark_mode_contrast			0.8
+#text_highlight_color    1.0 1.0 0.0
+#visual_mark_color    0.0 0.0 0.0 0.1
+#search_highlight_color  0.0 1.0 0.0
+#link_highlight_color    0.0 0.0 1.0
+#synctex_highlight_color    1.0 0.0 1.0
+
 #Amethyst
 highlight_color_a	0.94 0.64 1.00
 #Blue
@@ -321,3 +299,34 @@ highlight_color_z	1.00 0.31 0.02
 #ui_selected_background_color 	0.26667 0.27843 0.35294
 #
 #status_bar_font_size    	16
+
+#Gruvbox
+dark_mode_background_color     0.23529 0.20784 0.17647
+#dark_mode_contrast            0.8
+
+text_highlight_color           0.83921 0.74901 0.59215
+visual_mark_color              0.23529 0.20784 0.17647 0.8
+
+search_highlight_color         0.83921 0.74901 0.59215
+link_highlight_color           0.40784 0.37255 0.28627
+synctex_highlight_color        0.83921 0.74901 0.59215
+
+#highlight_color_a            	0.70980 0.53725 0.32549
+#highlight_color_b           	0.83921 0.74901 0.59215
+#highlight_color_c           	0.54901 0.45882 0.40392
+#highlight_color_d           	0.99215 0.81961 0.30980
+#highlight_color_e           	0.48235 0.40784 0.37647
+#highlight_color_f           	0.99215 0.51372 0.17647
+#highlight_color_g           	0.83921 0.74901 0.59215
+
+#default_dark_mode          	1
+
+font_size                    	12
+#ui_font                       	FiraCode Mono
+
+custom_background_color      	0.23529 0.20784 0.17647
+custom_text_color             	0.87843 0.82353 0.75294
+
+ui_text_color                 	0.87843 0.82353 0.75294
+ui_background_color           	
+
