--- a/sioyek/keys_user.config
+++ b/sioyek/keys_user.config
@@ -127,7 +127,7 @@ open_document_embedded_from_current_path <C-S-o>
 open_prev_doc O
 
 ## Opens the last document opened is sioyek. It is useful when you want to quickly toggle between two documents
-#open_last_document <unbound>
+open_last_document <tab>
 
 ## Keyboard shortcut to enter visual mark mode (instead of right clicking)
 #enter_visual_mark_mode <unbound>
