--- a/sioyek/prefs_user.config
+++ b/sioyek/prefs_user.config
@@ -1,17 +1,17 @@
 #Selfexplenatory -- embed annotation
-new_command _embed_annotations python -m sioyek.embed_annotations "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}"
+new_command _embed_annotations python /home/enrico/.config/sioyek/sioyek-python-extensions/embed_annotations.py "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}"
 
 #Selfexplenatory -- import annotation
-new_command _import_annotations python -m sioyek.import_annotations "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}"
+new_command _import_annotations python /home/enrico/.config/sioyek/sioyek-python-extensions/import_annotations.py "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}"
 
 #Selfexplenatory -- remove annotation
-new_command _remove_annotations python -m sioyek.remove_annotation "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}"
+new_command _remove_annotations python /home/enrico/.config/sioyek/sioyek-python-extensions/remove_annotation.py "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}"
 
 #Selfexplenatory -- add text
-new_command _add_text python -m sioyek.add_text "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}" "%{command_text}"
+new_command _add_text python /home/enrico/.config/sioyek/sioyek-python-extensions/add_text.py "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}" "%{command_text}"
 
 #Selfexplenatory -- add red text
-new_command _add_red_text python -m sioyek.add_text "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}" "%{command_text}" fontsize=5 text_color=255,0,0
+new_command _add_red_text python /home/enrico/.config/sioyek/sioyek-python-extensions/add_text.py "%{sioyek_path}" "%{local_database}" "%{shared_database}" "%{file_path}" "%{selected_rect}" "%{command_text}" fontsize=5 text_color=255,0,0
 
 # (can be 0 or 1) if set, shows a notification on startup if a new version of sioyek is available
 check_for_updates_on_startup	0
