--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -16,7 +16,7 @@ exec-once = /home/enrico/.config/hypr/scripts/portals.sh
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
 exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar --config /home/enrico/.config/waybar/hyprland_config --style /home/enrico/.config/waybar/hyprlandbar.css & dunst & signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland & thunderbird & rot8 & /usr/lib/kdeconnectd & wlsunset -S 08:00 -s 19:00
+exec-once = waybar --config /home/enrico/.config/waybar/hyprland_config.json --style /home/enrico/.config/waybar/hyprlandbar.css & dunst & signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland & thunderbird & rot8 & /usr/lib/kdeconnectd & wlsunset -S 08:00 -s 19:00
 #exec-once = swaybg --image /home/enrico/Pictures/Wallpapers/steampunk_city.jpeg
 exec-once = hyprpaper
 exec-once = obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
@@ -122,6 +122,7 @@ windowrule = fullscreen, title:wlogout
 windowrule = idleinhibit focus, mpv
 windowrule = idleinhibit fullscreen, firefox
 windowrule = float, title:^(Media viewer)$
+windowrule = float, title:^(Signal)$
 windowrule = float, title:^(Picture-in-Picture)$
 windowrule = opacity 0.92, Thunar
 windowrulev2 = float, center, opacity 1, class:^(kitty)$, title:^(spt)$
