--- a/sway/config
+++ b/sway/config
@@ -10,8 +10,8 @@ titlebar_padding 10 1
 
 # Read `man 5 sway` for a complete reference.
 smart_gaps on
-gaps inner 6 
-gaps outer 3
+gaps inner 2 
+gaps outer 0
 
 # Read `man 5 sway` for a complete reference.
 for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 25 ppt, border pixel 1
@@ -27,6 +27,7 @@ for_window [title="New Text Note — Okular"] floating enable
 for_window [class="Yad" instance="yad"] floating enable
 for_window [app_id="yad"] floating enable
 for_window [app_id="blueman-manager"] floating enable,  resize set width 40 ppt height 30 ppt
+for_window [app_id="signal"] floating enable
 
 # set floating (nontiling) for special apps:
 for_window [class="Xsane" instance="xsane"] floating enable
@@ -147,7 +148,8 @@ bindgesture --input-device=2:7:SynPS/2_Synaptics_TouchPad swipe:left workspace p
 bindgesture --input-device=2:7:SynPS/2_Synaptics_TouchPad swipe:right workspace next
 
 #Screen rotation
-bindsym $mod+o exec output DP-2 transform 90
+bindsym $mod+o exec wlr-randr --output eDP-1 --transform 90
+bindsym $mod+Shift+o exec wlr-randr --output eDP-1 --transform normal
 
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
@@ -216,6 +218,7 @@ bindsym mod1+Shift+f flatpak run com.brave.Browser
 #bindsym $mod+o exec okular
 bindsym $mod+y output DP-2 transform 90
 bindsym $mod+x exec killall -SIGUSR1 waybar
+bindsym $mod+Shift+x exec killall -SIGUSR2 waybar
 bindsym $mod+w exec /home/enrico/Scripts/wallpaper_change.sh
 
 # Layout stuff:
