--- a/waybar/hyprland_config.json
+++ b/waybar/hyprland_config.json
@@ -1,17 +1,18 @@
 {
     // "layer": "top", // Waybar at top layer
-    "position": "bottom", // Waybar position (top|bottom|left|right)
-    "height": 30, // Waybar height (to be removed for auto height)
+    "position": "top", // Waybar position (top|bottom|left|right)
+    "height": 15, // Waybar height (to be removed for auto height)
     // "width": 1280, // Waybar width
     "spacing": 0, // Gaps between modules (4px)
     // Choose the order of the modules
-    "modules-left": ["sway/workspaces", "sway/mode", "custom/media"],
-    "modules-center": ["sway/window"],
-    "modules-right": ["pulseaudio", "network", "battery", "clock", "tray", "custom/power"],
+    "modules-left": ["hyprland/workspaces", "sway/mode", "custom/media"],
+    "modules-right": ["pulseaudio", "battery", "network", "clock", "tray", "custom/power"],
+
     // Modules configuration
-    "sway/workspaces": {
+    "hyprland/workspaces": {
           "disable-scroll": true,
           "all-outputs": true,
+		  "on-click": "activate",
           "format": "{icon}",
         	"format-icons": {
              		"1": "一",
@@ -26,9 +27,11 @@
              		"10": "十"
          }
      },
+
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
+
     "mpd": {
         "format": "{stateIcon} {consumeIcon}{randomIcon}{repeatIcon}{singleIcon}{artist} - {album} - {title} ({elapsedTime:%M:%S}/{totalTime:%M:%S}) ⸨{songPosition}|{queueLength}⸩ {volume}% ",
         "format-disconnected": "Disconnected ",
@@ -55,88 +58,67 @@
         "tooltip-format": "MPD (connected)",
         "tooltip-format-disconnected": "MPD (disconnected)"
     },
+
       "tray": {
         // "icon-size": 21,
         "spacing": 10
     },
+
     "clock": {
         // "timezone": "America/New_York",
         "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
         "format-alt": "{:%Y-%m-%d}"
     },
+
     "battery": {
         "states": {
             // "good": 95,
             "warning": 30,
             "critical": 15
         },
-        "format": "{capacity}% <span font='13' rise='-1000'>{icon}</span>",
-        "format-charging": "{capacity}% ",
-        "format-plugged": "{capacity}% ",
-        "format-alt": "{time} {icon}",
+		"design-capacity": true,
+        "format": "{capacity}% <span font='15' rise='-1000'>{icon}</span>",
+        "format-charging": "{capacity}% <span font='15' rise='-1000'></span>",
+        "format-plugged": "{capacity}% <span font='15' rise='-1000'></span>",
+        "format-alt": "{time} <span font='15 'rise='-1000'>{icon}</span>",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
         "format-icons": ["", "", "", "", ""]
     },
+
     "network": {
         // "interface": "wlp2*", // (Optional) To force the use of this interface
-        "format-wifi": "{essid} ({signalStrength}%) <span font='13' rise='-1000'></span>",
+        "format-wifi": "{signalStrength}% <span font='13' rise='-1000'></span>",
         "format-ethernet": "{ipaddr}/{cidr} ",
         "tooltip-format": "{ifname} via {gwaddr} ",
         "format-linked": "{ifname} (No IP) ",
         "format-disconnected": "Disconnected ⚠",
         "format-alt": "{ifname}: {ipaddr}/{cidr}"
     },
+
     "custom/power": {
         "format":"⏻",
         "on-click": "exec ~/.config/waybar/scripts/power-menu.sh",
-        "tooltip": false,
+        "tooltip": false
     },
+
     "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{volume}% <span font='13' rise='-1000'>{icon}</span>",
-        "format-bluetooth": "{volume}% <span font='13' rise='-1000'>{icon}</span> {format_source}",
+        "format-bluetooth": "{volume}% <span font='13' rise='-1000'></span>",
         "format-bluetooth-muted": " <span font='13' rise='-1000'>{icon}</span> {format_source}",
         "format-icons": {
-            "headphone": "",
-            "hands-free": "",
-            "headset": "",
-            "phone": "",
-            "portable": "",
-            "car": "",
-            "default": ["", "", ""]
+            "headphone": "<span font='13'></span>",
+            "hands-free": "<span font='13'></span>",
+            "headset": "<span font='13'></span>",
+            "phone": "<span font='13'></span>",
+            "portable": "<span font='13'></span>",
+            "car": "<span font='13'></span>",
+            "default": ["<span font='13'></span>", "<span font='13'></span>", "<span font='13'></span>"]
         },
         "on-click": "pavucontrol"
     },
-    "custom/arrow1": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
 
-    "custom/arrow2": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
-
-    "custom/arrow3": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
-
-    "custom/arrow4": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
-
-    "custom/arrow5": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
-
-    "custom/arrow6": {
-      "format": "<span font='13' rise='-1000'></span>",
-      "tooltip": false
-    },
     "custom/media": {
         "format": "{icon} {}",
         "return-type": "json",
