--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,25 +1,41 @@
-## name: Nightfly
-## license: MIT
-## upstream:  https://github.com/bluz71/vim-nightfly-guicolors/blob/master/terminal_themes/kitty-theme.conf
+# Monokai
 
-background            #011627
-foreground            #acb4c2
-cursor                #9ca1aa
-selection_foreground  #080808
-selection_background  #b2ceee
-color0   #9ca1aa
-color1   #fc514e
-color2   #a1cd5e
-color3   #e3d18a
-color4   #82aaff
-color5   #c792ea
-color6   #7fdbca
-color7   #a1aab8
-color8   #7c8f8f
-color9   #ff5874
-color10  #21c7a8
-color11  #ecc48d
-color12  #82aaff
-color13  #ae81ff
-color14  #7fdbca
-color15  #d6deeb
+background #272822
+foreground #f8f8f2
+cursor #f8f8f2
+selection_background #f8f8f2
+selection_foreground #272822
+active_tab_background #75715e
+active_tab_foreground #272822
+active_border_color #75715e
+inactive_tab_background #272822
+inactive_tab_foreground #75715e
+inactive_border_color #75715e
+url_color #f8f8f2
+
+# 16 Color Space
+
+# black
+color0 #272822
+color8 #75715e
+# red
+color1 #f92672
+color9 #f92672
+# green
+color2 #a6e22e
+color10 #a6e22e
+# yellow
+color3 #e6db74
+color11 #e6db74
+# blue
+color4 #66d9ef
+color12 #66d9ef
+# magenta
+color5 #fd971f
+color13 #fd971f
+# cyan
+color6 #ae81ff
+color14 #ae81ff
+# white
+color7 #f8f8f2
+color15 #f8f8f2
