--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -1,41 +1,32 @@
-# Monokai
+# BlackMetal by metalelf0, https://github.com/metalelf0
+# This schemes are available as open source under the terms of the [MIT License](https://opensource.org/licenses/MIT).
 
-background #272822
-foreground #f8f8f2
-cursor #f8f8f2
-selection_background #f8f8f2
-selection_foreground #272822
-active_tab_background #75715e
-active_tab_foreground #272822
-active_border_color #75715e
-inactive_tab_background #272822
-inactive_tab_foreground #75715e
-inactive_border_color #75715e
-url_color #f8f8f2
+selection_foreground #000000
+selection_background #ffffff
 
-# 16 Color Space
+foreground #ffffff
+background #000000
 
-# black
-color0 #272822
-color8 #75715e
-# red
-color1 #f92672
-color9 #f92672
-# green
-color2 #a6e22e
-color10 #a6e22e
-# yellow
-color3 #e6db74
-color11 #e6db74
-# blue
-color4 #66d9ef
-color12 #66d9ef
-# magenta
-color5 #fd971f
-color13 #fd971f
-# cyan
-color6 #ae81ff
-color14 #ae81ff
-# white
-color7 #f8f8f2
-color15 #f8f8f2
+color0   #000000
+color1   #5f8787
+color2   #dd9999
+color3   #a06666
+color4   #888888
+color5   #999999
+color6   #aaaaaa
+color7   #c1c1c1
+color8   #333333
+color9   #5f8787
+color10  #dd9999
+color11  #a06666
+color12  #888888
+color13  #999999
+color14  #aaaaaa
+color15  #c1c1c1
+
+active_tab_foreground #ffffff
+active_tab_background #000000
+inactive_tab_foreground #666666
+inactive_tab_background #000000
+
+active_border_color #ffffff
