--- a/hypr/hyprpaper.conf
+++ b/hypr/hyprpaper.conf
@@ -1,29 +1,19 @@
-preload = /home/enrico/Pictures/Wallpapers/abstract_sky.jpg
-preload = /home/enrico/Pictures/Wallpapers/arindam-saha-PwzISwC2kLs-unsplash.jpg
-preload = /home/enrico/Pictures/Wallpapers/cherry _flowers.jpg
+wallpaper = DP-2,/home/enrico/Pictures/Wallpapers/lake_mountain_mirror.jpg
+wallpaper = eDP-1,/home/enrico/Pictures/Wallpapers/lake_mountain_mirror.jpg
+preload = /home/enrico/Pictures/Wallpapers/cherry_flowers.jpg
+preload = /home/enrico/Pictures/Wallpapers/cherry.webp
 preload = /home/enrico/Pictures/Wallpapers/coast_mountain.jpg
+preload = /home/enrico/Pictures/Wallpapers/dawn.jpg
 preload = /home/enrico/Pictures/Wallpapers/dock.jpg
 preload = /home/enrico/Pictures/Wallpapers/don_quishotte.png
 preload = /home/enrico/Pictures/Wallpapers/fenicotteri.jpeg
 preload = /home/enrico/Pictures/Wallpapers/io_e_lei.jpg
 preload = /home/enrico/Pictures/Wallpapers/iris.jpg
 preload = /home/enrico/Pictures/Wallpapers/lake_mountain_mirror.jpg
-preload = /home/enrico/Pictures/Wallpapers/materia_wallpaper.jpg
 preload = /home/enrico/Pictures/Wallpapers/midnight-train-tracks.jpg
-preload = /home/enrico/Pictures/Wallpapers/modigliani_wallpaper.jpeg
-preload = /home/enrico/Pictures/Wallpapers/monument_valley1.JPG
 preload = /home/enrico/Pictures/Wallpapers/mountain_4k.jpg
 preload = /home/enrico/Pictures/Wallpapers/nord_linux.jpg
+preload = /home/enrico/Pictures/Wallpapers/organize.jpg
 preload = /home/enrico/Pictures/Wallpapers/red_green_parrot.jpg
-preload = /home/enrico/Pictures/Wallpapers/space-wallpaper.jpg
 preload = /home/enrico/Pictures/Wallpapers/steampunk_city.jpeg
 preload = /home/enrico/Pictures/Wallpapers/Street_wide_monitor.jpeg
-preload = /home/enrico/Pictures/Wallpapers/wave_hokusai.jpeg
-preload = /home/enrico/Pictures/Wallpapers/wide_monitor_star2.jpeg
-preload = /home/enrico/Pictures/Wallpapers/wide_monitor_star.jpeg
-preload = /home/enrico/Pictures/Wallpapers/dawn.jpg
-preload = /home/enrico/Pictures/Wallpapers/organize.jpg
-
-wallpaper = DP-2,/home/enrico/Pictures/Wallpapers/lake_mountain_mirror.jpg
-wallpaper = eDP-1,/home/enrico/Pictures/Wallpapers/lake_mountain_mirror.jpg
-
