--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -14,15 +14,16 @@ env = QT_QPA_PLATFORMTHEME, qt5ct
 # Execute your favorite apps at launch
 exec-once = /home/enrico/.config/hypr/scripts/portals.sh 
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
+exec = waybar --config /home/enrico/.config/waybar/hyprland_config.json --style /home/enrico/.config/waybar/hyprlandbar.css
 exec-once = systemctl --user import-environment WAYLAND_DISPLAY XDG_CURRENT_DESKTOP 
+
 exec = /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
-exec-once = waybar --config /home/enrico/.config/waybar/hyprland_config.json --style /home/enrico/.config/waybar/hyprlandbar.css & dunst & signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland & thunderbird & rot8 & /usr/lib/kdeconnectd & wlsunset -S 08:00 -s 19:00
+exec-once = dunst & signal-desktop --use-tray-icon --enable-features=UseOzonePlatform --ozone-platform=wayland & thunderbird & rot8 & /usr/lib/kdeconnectd & wlsunset -S 08:00 -s 19:00 & fcitx5 -d --replace
 #exec-once = swaybg --image /home/enrico/Pictures/Wallpapers/steampunk_city.jpeg
 exec-once = hyprpaper
-exec-once = obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
+#exec-once = obsidian --enable-features=UseOzonePlatform --ozone-platform=wayland
 exec = kanshi
-exec = swayidle -w timeout 800 'swaylock -f -c 000000' timeout 600 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' before-sleep 'swaylock -f -c 000000'
-
+#exec = swayidle -w timeout 800 'swaylock -f -c 000000' timeout 900 'hyprctl despatch dpms off' resume 'hyprctl despatch dpms on' before-sleep 'swaylock -f -c 000000' timeout 3600 'systemctl suspend'
 # Source a file (multi-file configs)
 # source = ~/.config/hypr/myColors.conf
 
@@ -145,12 +146,13 @@ windowrulev2 = workspace 9, title:^(Telegram)$
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = SUPER, Return, exec, kitty
+bind = SUPER, Return, exec, alacritty
 bind = SUPER_SHIFT, Q, killactive 
-bind = SUPER, E, exit 
-bind = SUPER, E, exec, dolphin
-bind = SUPER, B, exec, firefox
+#bind = SUPER, E, exit 
+bind = SUPER, E, exec, thunar
+bind = SUPER, B, exec, mercury-browser
 bind = SUPER, M, exec, thunderbird
+bind = SUPER, Z, exec, zathura
 bind = SUPER, T, exec, telegram-desktop
 bind = SUPER, V, togglefloating 
 bind = SUPER, F, fullscreen
@@ -164,7 +166,7 @@ bind = SUPER, I, exec, /home/enrico/Scripts/spotify-tui-notification.sh
 bind = SUPER, X, exec, killall -SIGUSR1 waybar
 bind = SUPER_SHIFT, E, exec, /home/enrico/.config/waybar/scripts/power-menu.sh
 bind = SUPER_SHIFT, P, exec, /home/enrico/Scripts/powermodes.sh
-bind = SUPER_SHIFT, B, exec, swaylock -f -c 000000 
+bind = SUPER_SHIFT, B, exec, swayidle -w timeout 1 'swaylock -f -c 000000' timeout 900 'hyprctl despatch dpms off' resume 'hyprctl despatch dpms on' before-sleep 'swaylock -f -c 000000' timeout 3600 'systemctl suspend'
 
 # Move/resize windows with mainMod + LMB/RMB and dragging
 bindm = SUPER, mouse:272, movewindow
