--- a/sway/config
+++ b/sway/config
@@ -75,18 +75,19 @@ set $right l
 
 # Your preferred terminal emulator
 for_window [app_id="^launcher$"] floating enable, sticky enable, resize set 30 ppt 30 ppt, border pixel 2 
-set $menu exec wofi --show=drun --conf=/home/enrico/.config/wofi/config --style=/home/enrico/.config/wofi/style.css
-set $term kitty 
+set $menu tofi-drun --drun-launch=true 
+#set $menu exec wofi --show=drun --conf=/home/enrico/.config/wofi/config --style=/home/enrico/.config/wofi/style.css
+set $term alacritty 
 #$term --class=launcher -e /home/enrico/Scripts/sway-launcher-desktop.sh
 
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
 #fuzzel
-set $browser firefox
+set $browser mercury-browser
 set $mail thunderbird-wayland
 set $file thunar 
-
+set $pdf zathura
 #Startup applications
 exec_always --no-startup-id rot8
 input "1267:9623:ELAN2514:00_04F3:2597" {
@@ -217,6 +218,7 @@ bindsym $mod+Shift+s exec /home/enrico/Scripts/showkeys.sh
 bindsym $mod+Shift+p exec /home/enrico/Scripts/powermodes.sh
 bindsym $mod+u exec /home/enrico/Scripts/status_nofitication.sh
 bindsym $mod+d exec $menu 
+bindsym $mod+z exec $pdf 
 bindsym mod1+v exec /home/enrico/Scripts/vim_bindings.sh
 bindsym $mod+i exec /home/enrico/Scripts/spotify-tui-notification.sh
 bindsym mod1+Shift+f flatpak run com.brave.Browser 
