--- a/sway/config
+++ b/sway/config
@@ -113,6 +113,7 @@ exec_always /home/enrico/Scripts/clamshell_mode.sh
 exec /home/enrico/.config/hypr/scripts/portals.sh
 exec_always /usr/lib/kdeconnectd
 exec thunderbird
+exec strawberry
 #exec_always /home/enrico/Scripts/kitty_theme.sh
 exec xset +fp /home/enrico/.local/share/fonts
 exec /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
